stylelint, i18n lint added

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,3 +1,6 @@
 {
-  "language": "Change to Ukrainian"
+  "language": "Change to Ukrainian",
+  "aboutPage": "About Page",
+  "mainPage": "Main Page",
+  "toggle": "Toggle"
 }
