--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,3 +1,6 @@
 {
-  "language": "Змінити на англійську"
+  "language": "Змінити на англійську",
+  "aboutPage": "Про сайт",
+  "mainPage": "Головна",
+  "toggle": "Змінити"
 }
