404 page, loader, page loader

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,5 +2,6 @@
   "language": "Change to Ukrainian",
   "aboutPage": "About Page",
   "mainPage": "Main Page",
-  "toggle": "Toggle"
+  "toggle": "Toggle",
+  "notFound": "Page Not Found"
 }
