--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -2,5 +2,6 @@
   "language": "Змінити на англійську",
   "aboutPage": "Про сайт",
   "mainPage": "Головна",
-  "toggle": "Змінити"
+  "toggle": "Змінити",
+  "notFound": "Сторінка не знайдена"
 }
