--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -3,5 +3,8 @@
   "aboutPage": "Про сайт",
   "mainPage": "Головна",
   "toggle": "Змінити",
-  "notFound": "Сторінка не знайдена"
+  "notFound": "Сторінка не знайдена",
+  "unexpectedError": "Виникла непередбачувана помилка",
+  "pageRefresh": "Оновити сторінку",
+  "throwError": "Викинути Помилку"
 }
