update sidebar, update button

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "language": "Change to Ukrainian",
+  "languageShort": "UA",
   "aboutPage": "About Page",
   "mainPage": "Main Page",
   "toggle": "Toggle",
