--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -1,5 +1,6 @@
 {
   "language": "Змінити на англійську",
+  "languageShort": "EN",
   "aboutPage": "Про сайт",
   "mainPage": "Головна",
   "toggle": "Змінити",
